<resources>
    <string name="app_name">WENTAL</string>

    <string name="user_name">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="alternativeSignOn">or continue with</string>
    <string name="login">LOGIN</string>
    <string name="signIn">Register</string>
    <string name="registrationHeader">Create Account</string>
    <string name="registrationSubHeader">Fill in the fields to register your account</string>
    <string name="registrationRedirect">Already have an account? Login</string>
    <string name="registrationPasswordHelper">Your password should have at least 8 characters</string>
    <string name="LoginHeaderText">Welcome Back</string>
    <string name="loginRedirect">Don\'t have an account? Register</string>
</resources>