<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    tools:context=".Registration">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/registrationImage"
        android:layout_width="311dp"
        android:layout_height="258dp"
        android:src="@drawable/undraw_create_re_57a3"
        app:layout_constraintBottom_toTopOf="@id/regHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/regHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrationHeader"
        android:textSize="@dimen/headerSize"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toTopOf="@id/regSubHeader"/>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/regSubHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginBottom="228dp"
        android:gravity="center"
        android:text="@string/registrationSubHeader"
        android:textSize="@dimen/subheaderSize"
        app:layout_constraintBottom_toTopOf="@id/Username"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:layout_marginTop="20dp"
        android:layout_margin="15dp"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/regHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UsernameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_margin="15dp"
        android:hint="@string/email"
        style="@style/TextInputLayoutStyle"
        app:layout_constraintTop_toBottomOf="@id/Username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EmailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#546E7A" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:hint="@string/password"
        style="@style/TextInputLayoutStyle"
        app:endIconMode="password_toggle"
        app:counterEnabled="true"
        app:counterMaxLength="8"
        app:layout_constraintTop_toBottomOf="@id/Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/PasswordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/regSubHeader1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/registrationRedirect"
        android:textSize="@dimen/subheaderSize"
        app:layout_constraintEnd_toStartOf="@+id/loginTextButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Password"/>

        <Button
            android:id="@+id/loginTextButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="63dp"
            android:layout_height="34dp"
            android:layout_marginStart="-7dp"
            android:layout_marginTop="8dp"
            android:padding="0dp"
            android:text="@string/login"
            android:textSize="@dimen/subheaderSize"
            app:layout_constraintStart_toEndOf="@+id/regSubHeader1"
            app:layout_constraintTop_toBottomOf="@id/Password" />



</androidx.constraintlayout.widget.ConstraintLayout>